argocd-manifests/redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-http-to-https
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
    permanent: true
